# sixfive

./: .gitignore  Cargo.toml
patches/: channeltests.txt  fib.txt
sets/fib/: fib.als
sixfive/: Cargo.toml
sixfive/src/: cpu.rs  gui.rs  lib.rs  main.rs  params.rs  sound.rs
xtask/: Cargo.toml
