[package]
name = "sixfive"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.nih_plug]
git = "https://github.com/robbert-vdh/nih-plug.git"
features = ["standalone"]

[dependencies.nih_plug_egui]
git = "https://github.com/robbert-vdh/nih-plug.git"

